# splotch-api

./: .gitignore  Cargo.toml  Procfile
migrations/2020-11-05-163145_create_user/: up.sql
migrations/2020-11-09-022831_create_posts/: up.sql
migrations/2020-11-17-180651_create_snippet/: up.sql
migrations/2021-02-03-164515_user_add_spotify_id/: down.sql  up.sql
src/: controllers.rs  errors.rs  main.rs  models.rs  schema.rs
src/controllers/: auth_controller.rs  db_utils.rs  post_controller.rs  spotify_controller.rs  user_controller.rs
src/models/: post.rs  snippet.rs  spotify.rs  user.rs
src/services/: spotify_service.rs
